--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
     "start": "NODE_ENV=production node --use-strict .",
-    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
+    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module",
+    "exportdocs": "npx @markdown-confluence/cli"
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
@@ -56,6 +57,7 @@
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@markdown-confluence/cli": "^5.5.2",
     "@shelf/jest-mongodb": "4.3.2",
     "@types/convict": "^6.1.6",
     "@types/jest": "^29.5.14",
@@ -83,6 +85,7 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-fetch-mock": "3.0.3",
+    "node-plantuml": "^0.9.0",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
