--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.21",
     "mongo-locks": "^3.0.2",
     "mongodb": "^6.10.0",
+    "mongoose": "^8.9.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "undici": "^6.20.1"
@@ -61,11 +62,12 @@
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "@shelf/jest-mongodb": "4.3.2",
     "@faker-js/faker": "9.0.3",
+    "@shelf/jest-mongodb": "4.3.2",
     "@types/convict": "^6.1.6",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
     "@types/nunjucks": "^3.2.6",
     "@types/webpack-assets-manifest": "^5.1.4",
@@ -89,6 +91,7 @@
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-fetch-mock": "3.0.3",
+    "mockingoose": "^2.16.2",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
