rps-469: mongodb integration with test data setup

--- a/compose.yml
+++ b/compose.yml
@@ -85,6 +85,7 @@ services:
       NODE_ENV: development
       LOCALSTACK_ENDPOINT: http://localstack:4566
       MONGO_URI: mongodb://mongodb:27017/
+      SEED_DB: true
     networks:
       - cdp-tenant
 
