--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:server",
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
-    "dev": "npm run server:watch",
+    "dev": "SEED_DB=true npm run server:watch",
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
@@ -46,8 +46,7 @@
     "hapi-pulse": "^3.0.1",
     "https-proxy-agent": "^7.0.5",
     "lodash": "^4.17.21",
-    "mongo-locks": "^3.0.2",
-    "mongodb": "^6.10.0",
+    "mongoose": "^8.13.0",
     "node-fetch": "^3.3.2",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
