--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "aws4": "^1.13.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
+    "dotenv": "^16.5.0",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "https-proxy-agent": "^7.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.0",
     "node-fetch": "^3.3.2",
+    "pg": "^8.15.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "undici": "^6.20.1"
