Ignore seed-database from code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.links.scm=https://github.com/DEFRA/land-grants-api
 sonar.links.issue=https://github.com/DEFRA/land-grants-api/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.js
+sonar.exclusions=src/**/*.test.js, src/api/common/helpers/seed-database.js
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
