--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
-    "start": "NODE_ENV=production node --use-strict .",
+    "start": "NODE_ENV=local node --use-strict .",
     "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "author": "Defra DDTS",
@@ -42,6 +42,7 @@
     "aws4": "^1.13.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
+    "cross-env": "^7.0.3",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "https-proxy-agent": "^7.0.5",
@@ -49,6 +50,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.13.0",
     "node-fetch": "^3.3.2",
+    "pg": "^8.15.6",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "undici": "^6.20.1"
