Add api documentation via swagger

--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "@defra/hapi-tracing": "^1.0.0",
     "@elastic/ecs-pino-format": "^1.5.0",
     "@hapi/boom": "^10.0.1",
-    "@hapi/hapi": "^21.3.12",
+    "@hapi/hapi": "^21.4.0",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.3",
     "aws-embedded-metrics": "^4.2.0",
     "aws4": "^1.13.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
+    "hapi-swagger": "^17.3.2",
     "https-proxy-agent": "^7.0.5",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
