--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ ENTRA_INTERNAL_TOKEN_URL=https://login.microsoftonline.com
 ENTRA_INTERNAL_TENANT_ID=***
 ENTRA_INTERNAL_CLIENT_ID=***
 NODE_ENV=local
+
+GRANTS_UI_PUBLIC_KEY=
