--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
     "dotenv": "^16.5.0",
+    "hapi-auth-jwt2": "^11.0.0",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "hapi-swagger": "^17.3.2",
