RPS-606: Ignore large land data files in git tracking, they will be ignored in the commits

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ docs/.obsidian
 globalConfig.json
 
 tsconfig.tsbuildinfo
+
+# Land data files
+land-covers-data.sql
+land-parcels-data.sql
+moorland-designations-data.sql
