RPS-606: Read update and .env.example update with new  variable DISABLE_POSTGRES=false

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ ENTRA_INTERNAL_TOKEN_URL=https://login.microsoftonline.com
 ENTRA_INTERNAL_TENANT_ID=***
 ENTRA_INTERNAL_CLIENT_ID=***
 NODE_ENV=local
+DISABLE_POSTGRES=false
