--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@aws-sdk/credential-providers": "^3.808.0",
+    "@aws-sdk/rds-signer": "^3.808.0",
     "@babel/runtime": "^7.26.0",
     "@defra/hapi-tracing": "^1.0.0",
     "@elastic/ecs-pino-format": "^1.5.0",
