--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SEED_DB=true
+SEED_MONGODB=true
 NODE_ENV=local
 DISABLE_POSTGRES=false
 POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
