--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:server",
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
-    "dev": "NODE_ENV=local SEED_DB=true npm run server:watch",
+    "dev": "NODE_ENV=local SEED_MONGODB=true npm run server:watch",
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
