--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_HOST_READ=land-grants-api.cluster-ro-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_REGION=eu-west-2
 POSTGRES_USERNAME=land_grants_api
+POSTGRES_PASSWORD=land_grants_api
 POSTGRES_DATABASE=land_grants_api
