--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
-    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test && npm run test:integration",
+    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test && npm run test:db",
     "postinstall": "npm run setup:husky",
     "lint": "run-s lint:js lint:types",
     "lint:fix": "eslint --cache . --fix",
@@ -24,7 +24,7 @@
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "test": "jest --coverage --verbose --runInBand",
     "test:watch": "jest --watch",
-    "test:integration": "npx jest --projects=src/integration-tests",
+    "test:db": "npx jest --projects=src/db-tests",
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
