Run the db tests in ci

--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
-    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test && npm run test:db",
+    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
     "postinstall": "npm run setup:husky",
     "lint": "run-s lint:js lint:types",
     "lint:fix": "eslint --cache . --fix",
     "lint:js": "eslint --cache .",
     "lint:types": "tsc --build tsconfig.json",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
-    "test": "jest --coverage --verbose --runInBand",
+    "test": "npm run test:unit && npm run test:db",
+    "test:unit": "jest --coverage --verbose --runInBand",
     "test:watch": "jest --watch",
     "test:db": "npx jest --projects=src/db-tests",
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
