--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "npm run build:server",
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
-    "dev": "NODE_ENV=local SEED_MONGODB=true npm run server:watch",
-    "load:data": "NODE_ENV=local SEED_MONGODB=true DISABLE_POSTGRES=false LOAD_POSTGRES_DATA=true node src/load-postgres-data.js",
+    "dev": "NODE_ENV=local npm run server:watch",
+    "load:data": "npm run load:postgres-data && npm run load:mongo-data",
+    "load:postgres-data": "NODE_ENV=local node src/load-postgres-data.js",
+    "load:mongo-data": "NODE_ENV=local SEED_MONGODB=true node src/load-mongodb-data.js",
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
