--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "docker:dev": "NODE_ENV=development npm run server:watch",
     "dev": "NODE_ENV=local npm run server:watch",
-    "load:data": "npm run load:postgres-data && npm run load:mongo-data",
-    "load:postgres-data": "NODE_ENV=local node src/load-postgres-data.js",
-    "load:mongo-data": "NODE_ENV=local SEED_MONGODB=true node src/load-mongodb-data.js",
     "dev:debug": "npm run server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
@@ -33,7 +30,10 @@
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
     "start": "NODE_ENV=production node --use-strict .",
-    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
+    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module",
+    "load:data": "npm run load:data:postgres && npm run load:data:mongo",
+    "load:data:postgres": "NODE_ENV=local node src/load-data-postgres.js",
+    "load:data:mongo": "NODE_ENV=local SEED_MONGODB=true node src/load-data-mongodb.js"
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
