--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "babel-loader": "^9.2.1",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "cross-env": "^7.0.3",
+    "csv-parse": "^5.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
