remove load data script

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "prestart": "npm run build",
     "start": "NODE_ENV=production node --use-strict .",
     "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module",
-    "load:data": "npm run load:data:postgres",
-    "load:data:postgres": "NODE_ENV=local node src/load-data-postgres.js"
+    "load:data": "NODE_ENV=local node src/load-data-postgres.js"
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
