Truncate Postgres data with DDL user

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_HOST_READ=land-grants-api.cluster-ro-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_REGION=eu-west-2
 POSTGRES_USERNAME=land_grants_api
+POSTGRES_DDL_USERNAME=land_grants_api_ddl
 POSTGRES_PASSWORD=land_grants_api
 POSTGRES_DATABASE=land_grants_api
