Revert "migrate actions & remove mongodb (#143)"
This reverts commit 3bddb48a0089ce5644e0eec5182b9a768543c915.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SEED_MONGODB=true
 NODE_ENV=local
 POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_HOST_READ=land-grants-api.cluster-ro-crfypi4jpal8.eu-west-2.rds.amazonaws.com
