--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "aws4": "^1.13.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
