--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,9 +12,9 @@ sonar.links.ci=https://github.com/DEFRA/land-grants-api/actions
 sonar.links.scm=https://github.com/DEFRA/land-grants-api
 sonar.links.issue=https://github.com/DEFRA/land-grants-api/issues
 
-
+sonar.sources=src/
 sonar.exclusions=**/logger-options.js,**/config.js,**/index.js,**/__mocks__/*.cjs,**/__mocks__/*.js, src/**/*.test.js, src/api/common/helpers/seed-database.js,src/api/common/helpers/seed-data/**,src/**/*.sql
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/merged/lcov.info
