--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.links.scm=https://github.com/DEFRA/land-grants-api
 sonar.links.issue=https://github.com/DEFRA/land-grants-api/issues
 
 sonar.sources=src/
-sonar.exclusions=**/logger-options.js,**/config.js,**/index.js,**/__mocks__/*.cjs,**/__mocks__/*.js, src/**/*.test.js, src/api/common/helpers/seed-database.js,src/api/common/helpers/seed-data/**,src/**/*.sql
+sonar.exclusions=**/logger-options.js,**/config.js,**/index.js,**/__mocks__/*.cjs,**/__mocks__/*.js, src/api/common/helpers/seed-data/**,src/**/*.sql, src/db-tests/fixtures/**, src/db-tests/setup/**, src/db-tests/testLogger.js
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
