--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -25,7 +25,7 @@ jobs:
           node-version-file: '.nvmrc'
           cache: npm
       - run: |
-          npm ci
+          npm ci --ignore-scripts
           npm run build
           npm run format:check
           npm run lint
