--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -28,7 +28,7 @@ jobs:
           cache: npm
 
       # Ensure tests pass. Add more checks if required
-      - run: npm ci
+      - run: npm ci --ignore-scripts
       - run: npm test
 
       - name: Publish Hot Fix
