--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "nyc": "^17.1.0",
+    "pg-copy-streams": "^7.0.0",
     "prettier": "^3.3.3",
     "testcontainers": "^11.0.0",
     "tsx": "^4.19.2",
