created a passing pact provider test for the parcel endpoint

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "test": "npm run test:unit && npm run test:db && npm run merge:coverage",
     "test:unit": "jest --config=jest.unit.config.js --coverage --verbose --runInBand",
+    "test:quick": "jest --config=jest.unit.config.js ",
     "test:watch": "jest --watch",
     "test:db": "npm run extractsql && npx jest --config=jest.db.config.js --runInBand --coverage",
     "merge:coverage": "./scripts/move-coverage && nyc merge coverage/tmp coverage/merged/coverage.json && nyc report --temp-dir coverage/merged --reporter=html --reporter=lcov --report-dir coverage/merged",
@@ -69,6 +70,7 @@
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@pact-foundation/pact": "^15.0.1",
     "@shelf/jest-mongodb": "4.3.2",
     "@types/convict": "^6.1.6",
     "@types/jest": "^29.5.14",
