--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "pg": "^8.15.6",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
+    "save-dev": "^0.0.1-security",
     "undici": "^6.20.1"
   },
   "devDependencies": {
@@ -71,9 +72,12 @@
     "@babel/preset-env": "^7.26.0",
     "@shelf/jest-mongodb": "4.3.2",
     "@types/convict": "^6.1.6",
+    "@types/hapi": "^18.0.14",
+    "@types/hapi__hapi": "^21.0.0",
+    "@types/hapi-pino": "^9.1.3",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.18.6",
     "@types/nunjucks": "^3.2.6",
     "@types/webpack-assets-manifest": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
