--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ POSTGRES_REGION=eu-west-2
 POSTGRES_USERNAME=land_grants_api
 POSTGRES_PASSWORD=land_grants_api
 POSTGRES_DATABASE=land_grants_api
+
+PACT_BROKER_URL=https://ffc-pact-broker.azure.defra.cloud
+PACT_BROKER_USERNAME=pactuser01
+PACT_BROKER_PASSWORD=ASK_ANDREW_DEACON_FOR_PASSWORD
