--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -30,6 +30,7 @@ jobs:
           npm run format:check
           npm run lint
           npm test
+          npm run test:contracts
 
       - name: Test Docker Image Build
         run: |
@@ -44,6 +45,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  
+
   version-check:
-        uses: ./.github/workflows/check-version.yml
+    uses: ./.github/workflows/check-version.yml
