--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.18.6",
     "@types/nunjucks": "^3.2.6",
+    "@types/pg": "^8.15.5",
     "@types/webpack-assets-manifest": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
