--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,8 @@
     "skipLibCheck": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "types": ["jest", "node", "@hapi/hapi"]
+    "types": ["jest", "node", "@hapi/hapi", "hapi-pino"]
   },
-  "include": [
-    "types.d.ts",
-    "src/api/application/controllers/application-validation.controller.js"
-  ]
+  "exclude": ["src/**/*.test.js"],
+  "include": ["src/api/application/**/*.js"]
 }
