--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "module": "NodeNext",
     "noEmit": true,
     "paths": {
@@ -11,8 +11,15 @@
     "skipLibCheck": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "types": ["jest", "node", "@hapi/hapi", "hapi-pino"]
+    "types": ["jest"]
   },
-  "exclude": ["src/**/*.test.js"],
-  "include": ["src/api/application/**/*.js"]
+  "exclude": [".cache", ".public", ".server", "coverage", "node_modules"],
+  "include": [
+    "**/*.cjs",
+    "**/*.js",
+    ".*.cjs",
+    ".*.js",
+    ".eslintrc.*",
+    ".prettierrc.*"
+  ]
 }
