Fix remaining type issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": false,
+    "checkJs": true,
     "module": "NodeNext",
     "noEmit": true,
     "paths": {
@@ -13,7 +13,14 @@
     "strictNullChecks": true,
     "types": ["jest"]
   },
-  "exclude": [".cache", ".public", ".server", "coverage", "node_modules"],
+  "exclude": [
+    ".cache",
+    ".public",
+    ".server",
+    "coverage",
+    "node_modules",
+    "src/**/*.test.js"
+  ],
   "include": [
     "**/*.cjs",
     "**/*.js",
