--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,23 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update package version
-        uses: ./.github/workflows/update-version.yml
+        run: |
+          git fetch --tags
+          git fetch --prune --unshallow || true
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+
+          BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
+          git fetch origin "$BRANCH_NAME"
+          git checkout "$BRANCH_NAME"
+
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          npm version "$LATEST_TAG" --no-git-tag-version
+          git add package.json
+          git commit -m "update version [skip ci]" --no-verify
+          git push origin "$BRANCH_NAME"
+          echo "$LATEST_TAG"
 
       - name: Make extract seed file script executable
         run: chmod +x ./scripts/extract-gz-to-sql
