try commiting to rest api

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,18 +32,20 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update package version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DESTINATION_BRANCH: main
+          FILE_TO_COMMIT: package.json
         run: |
-          git fetch --tags
-          LATEST_TAG=$(git describe --tags --abbrev=0)
-
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-
-          npm version "$LATEST_TAG" --no-git-tag-version
-          git add package.json
-          git commit -S -m "update version [skip ci]" --no-verify
-          git push origin HEAD:${{ github.ref_name }}
-          echo "$LATEST_TAG"
+          export MESSAGE="update version [skip ci]"
+          export SHA=$( git rev-parse $DESTINATION_BRANCH:$FILE_TO_COMMIT )
+          export CONTENT=$( base64 -i $FILE_TO_COMMIT )
+          gh api --method PUT /repos/:owner/:repo/contents/$FILE_TO_COMMIT \
+            --field message="$MESSAGE" \
+            --field content="$CONTENT" \
+            --field encoding="base64" \
+            --field branch="${{ env.DESTINATION_BRANCH }}" \
+            --field sha="$SHA"
 
       - name: Make extract seed file script executable
         run: chmod +x ./scripts/extract-gz-to-sql
