--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pg": "^8.16.3",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
+    "simple-git": "^3.28.0",
     "undici": "^6.20.1"
   },
   "devDependencies": {
