WIP add local stack

--- a/compose.yml
+++ b/compose.yml
@@ -43,10 +43,35 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  localstack:
+      image: localstack/localstack:3.0.2
+      container_name: localstack
+      ports:
+        - '4566:4566' # LocalStack Gateway
+        - '4510-4559:4510-4559' # external services port range
+      env_file:
+        - 'compose/aws.env'
+      environment:
+        DEBUG: ${DEBUG:-1}
+        LS_LOG: WARN # Localstack DEBUG Level
+        SERVICES: s3,sqs,sns,firehose
+        LOCALSTACK_HOST: 127.0.0.1
+        MONITOR_SQS: ${MONITOR_SQS:-true}
+      volumes:
+        - '${TMPDIR:-/tmp}/localstack:/var/lib/localstack'
+        - ./compose/start-localstack.sh:/etc/localstack/init/ready.d/start-localstack.sh
+        - ./compose/monitor-sqs.sh:/etc/localstack/init/ready.d/monitor-sqs.sh
+      healthcheck:
+        test: ['CMD', 'curl', 'localhost:4566']
+        interval: 5s
+        start_period: 5s
+        retries: 3
+      networks:
+        - cdp-tenant
+
 volumes:
   postgres_data:
 
 networks:
   cdp-tenant:
-    external: true
 
