update topics and queues

--- a/compose/aws.env
+++ b/compose/aws.env
@@ -5,5 +5,5 @@ AWS_SECRET_ACCESS_KEY=test
 
 SNS_ENDPOINT=http://localstack:4566
 AWS_ENDPOINT=http://localstack:4566
-QUEUE_URL=http://sqs.eu-west-2.127.0.0.1:4566/000000000000/create_agreement
-TOPIC_ARN=arn:aws:sns:eu-west-2:000000000000:grant_application_approved
+QUEUE_URL=http://sqs.eu-west-2.127.0.0.1:4566/000000000000/ingest_land_data
+TOPIC_ARN=arn:aws:sns:eu-west-2:000000000000:land_data_updated
