--- a/compose.yml
+++ b/compose.yml
@@ -54,13 +54,11 @@ services:
       environment:
         DEBUG: ${DEBUG:-1}
         LS_LOG: WARN # Localstack DEBUG Level
-        SERVICES: s3,sqs,sns,firehose
+        SERVICES: s3
         LOCALSTACK_HOST: 127.0.0.1
-        MONITOR_SQS: ${MONITOR_SQS:-true}
       volumes:
         - '${TMPDIR:-/tmp}/localstack:/var/lib/localstack'
         - ./compose/start-localstack.sh:/etc/localstack/init/ready.d/start-localstack.sh
-        - ./compose/monitor-sqs.sh:/etc/localstack/init/ready.d/monitor-sqs.sh
       healthcheck:
         test: ['CMD', 'curl', 'localhost:4566']
         interval: 5s
