--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.914.0",
     "@aws-sdk/credential-providers": "^3.880.0",
     "@aws-sdk/rds-signer": "^3.880.0",
     "@babel/runtime": "^7.28.3",
@@ -55,6 +56,7 @@
     "convict": "^6.2.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "hapi-cron": "^1.1.0",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "hapi-swagger": "^17.3.2",
