--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           path: ./changelog
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
 
       - name: Create Test Coverage Reports
         run: |
