--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "dev": "NODE_ENV=local npm run server:watch",
     "dev:setup": "scripts/start",
     "dev:debug": "npm run server:debug",
+    "docker:db:migrate:up": "docker compose -f compose.migrations.yml run --rm database-up",
+    "docker:db:migrate:down": "docker compose -f compose.migrations.yml run --rm database-down",
+    "docker:up": "docker compose up --build -d",
+    "docker:down": "docker compose down --remove-orphans",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js,graphql.js}\"",
     "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
