Service to service authentication

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ POSTGRES_DATABASE=land_grants_api
 PACT_BROKER_URL=https://ffc-pact-broker.azure.defra.cloud
 PACT_BROKER_USERNAME=pactuser01
 PACT_BROKER_PASSWORD=ASK_ANDREW_DEACON_FOR_PASSWORD
+
+LAND_GRANTS_AUTH_TOKEN=  # 64-char alphanumeric string (no capitals). Generate: openssl rand -hex 32
+LAND_GRANTS_ENCRYPTION_KEY=  # 64-char alphanumeric string. Generate: openssl rand -hex 32
