Service to service authentication (#276)
* Service to service authentication

* Fixing sonar issues

* Fixing sonar issues

* Fixing sonar issues

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ PACT_BROKER_URL=https://ffc-pact-broker.azure.defra.cloud
 PACT_BROKER_USERNAME=pactuser01
 PACT_BROKER_PASSWORD=ASK_ANDREW_DEACON_FOR_PASSWORD
 
+# Service to service authentication
+LAND_GRANTS_AUTH_TOKEN=test-token-test-token-test-token-test-token-test-t-64-chars-long
+LAND_GRANTS_ENCRYPTION_KEY=test-token-test-token-test-token-test-token-test-t-64-chars-long
+
 # Localstack, used locally for data ingestion
 AWS_REGION=eu-west-2
 AWS_ACCESS_KEY_ID=test
