cleanup docs, remove logs

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 NODE_ENV=local
 
 # Override postgres config
-POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
-POSTGRES_HOST_READ=land-grants-api.cluster-ro-crfypi4jpal8.eu-west-2.rds.amazonaws.com
+# POSTGRES_HOST=land-grants-api.cluster-crfypi4jpal8.eu-west-2.rds.amazonaws.com
+# POSTGRES_HOST_READ=land-grants-api.cluster-ro-crfypi4jpal8.eu-west-2.rds.amazonaws.com
 POSTGRES_REGION=eu-west-2
 POSTGRES_USERNAME=land_grants_api
 POSTGRES_PASSWORD=land_grants_api
@@ -14,8 +14,8 @@ PACT_BROKER_USERNAME=pactuser01
 PACT_BROKER_PASSWORD=ASK_ANDREW_DEACON_FOR_PASSWORD
 
 # Service to service authentication
-LAND_GRANTS_AUTH_TOKEN=test-token-test-token-test-token-test-token-test-t-64-chars-long
-LAND_GRANTS_ENCRYPTION_KEY=test-token-test-token-test-token-test-token-test-t-64-chars-long
+LAND_GRANTS_AUTH_TOKEN=ASK-A-COLLEAGUE
+LAND_GRANTS_ENCRYPTION_KEY=ASK-A-COLLEAGUE
 
 # Localstack, used locally for data ingestion
 AWS_REGION=eu-west-2
